--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Router for express.js which supports yield and promises",
   "main": "lib/router.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "grunt prepublish"
   },
   "repository": {
     "type": "git",
